# dtx

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  flake.nix  tailwind.config.js
.cursor/: mcp.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/dtx/: Cargo.toml
crates/dtx-agent/: Cargo.toml
crates/dtx-agent/src/: claude.rs  config.rs  error.rs  lib.rs  message.rs  ollama.rs  openai.rs  resource.rs  runtime.rs  tools.rs
crates/dtx-code/: Cargo.toml
crates/dtx-code/src/: edit.rs  error.rs  index.rs  language.rs  lib.rs  parser.rs  patterns.rs  references.rs  rename.rs  search.rs  symbol.rs  workspace.rs
crates/dtx-core/: Cargo.toml
crates/dtx-core/src/: error.rs  lib.rs  model.rs
crates/dtx-core/src/config/: generator.rs  loader.rs  mod.rs  process_compose.rs  project.rs  schema.rs
crates/dtx-core/src/domain/: environment.rs  mod.rs  port.rs  service_name.rs  shell_command.rs
crates/dtx-core/src/events/: filter.rs  helpers.rs  instance.rs  lifecycle.rs  mod.rs  resource_bus.rs  socket.rs
crates/dtx-core/src/export/: docker_compose.rs  error.rs  kubernetes.rs  mod.rs  process_compose.rs  types.rs
crates/dtx-core/src/graph/: analyzer.rs  extract.rs  mod.rs  types.rs  validator.rs
crates/dtx-core/src/middleware/: mod.rs  operation.rs  stack.rs  traits.rs
crates/dtx-core/src/nix/: cache.rs  client.rs  command.rs  devenv.rs  envrc.rs  flake.rs  lockfile.rs  mappings.rs  mod.rs  models.rs  native.rs  shell.rs  sync.rs
crates/dtx-core/src/nix/ast/: flake.rs  imports.rs  mod.rs  package_export.rs  parser.rs  script_detection.rs
crates/dtx-core/src/nix/backend/: cli.rs  mod.rs  native.rs
crates/dtx-core/src/process/: mod.rs  port.rs  preflight.rs
crates/dtx-core/src/resource/: config.rs  context.rs  error.rs  health.rs  id.rs  kind.rs  mod.rs  state.rs  traits.rs
crates/dtx-core/src/store/: error.rs  mod.rs  registry.rs
crates/dtx-core/src/translation/: codebase.rs  container.rs  context.rs  contextual.rs  defaults.rs  error.rs  inference.rs  mod.rs  registry.rs  traits.rs
crates/dtx-core/src/translation/import/: docker_compose.rs  error.rs  mod.rs  process_compose.rs  procfile.rs  types.rs
crates/dtx-core/tests/: graph_validation_integration.rs
crates/dtx-memory/: Cargo.toml
crates/dtx-memory/src/: error.rs  lib.rs  search.rs  store.rs  types.rs
crates/dtx-middleware/: Cargo.toml
crates/dtx-middleware/src/: lib.rs  logging.rs  timeout.rs
crates/dtx-middleware/src/ai/: error.rs  middleware.rs  mod.rs  provider.rs  suggestions.rs
crates/dtx-middleware/src/metrics/: middleware.rs  mod.rs  registry.rs  types.rs
crates/dtx-middleware/src/retry/: backoff.rs  middleware.rs  mod.rs
crates/dtx-plugin/: Cargo.toml
crates/dtx-plugin/src/: error.rs  lib.rs  loader.rs  macros.rs  manifest.rs  traits.rs
crates/dtx-plugin/src/sandbox/: capabilities.rs  host.rs  limits.rs  mod.rs  plugin.rs  runtime.rs  signing.rs
crates/dtx-process/: Cargo.toml
crates/dtx-process/src/: agent.rs  config.rs  container.rs  lib.rs  orchestrator.rs  probe.rs  process.rs  process_tree.rs  translator.rs  vm.rs
crates/dtx-protocol/: Cargo.toml
crates/dtx-protocol/src/: handler.rs  jsonrpc.rs  lib.rs  methods.rs
crates/dtx-protocol/src/mcp/: handler.rs  mod.rs  resources.rs  tools.rs  types.rs
crates/dtx-protocol/src/nl/: executor.rs  mod.rs  parser.rs
crates/dtx-protocol/src/transport/: http.rs  mod.rs  stdio.rs  websocket.rs
crates/dtx-vm/: Cargo.toml
crates/dtx-vm/src/: config.rs  error.rs  firecracker.rs  lib.rs  nixos.rs  qemu.rs  resource.rs  runtime.rs
crates/dtx-web/: Cargo.toml
crates/dtx-web/src/: config.rs  error.rs  lib.rs  registry.rs  routes.rs  sse.rs  state.rs  static_files.rs  types.rs
crates/dtx-web/src/handlers/: api.rs  html.rs  htmx.rs  mod.rs  sse.rs
crates/dtx-web/src/service/: mod.rs  ops.rs  orchestration.rs
crates/dtx-web/templates/: base.html  index.html  mappings.html  projects.html  search.html  services.html
crates/dtx-web/templates/partials/: activity_feed.html  add_package_result.html  detail_panel.html  error_toast.html  export_panel.html  graph_panel.html  import_form.html  import_result.html  logs_panel.html  logs_panel_live.html  mappings_list.html  mappings_table.html  nix_panel.html  project_switcher.html  projects_list.html  search_results.html  service_form.html  service_graph.html  services_list.html  sidebar_entities.html  sidebar_files.html  sidebar_memories.html  sidebar_services.html  sidebar_symbols.html  signal_filter.html  status_badge.html  status_panel.html  status_panel_live.html
crates/dtx-web/tests/: nix_tests.rs  sse_tests.rs
crates/dtx/src/: context.rs  main.rs
crates/dtx/src/cmd/: add.rs  code.rs  completions.rs  config.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  logs.rs  mcp.rs  memory.rs  mod.rs  nix.rs  parsers.rs  remove.rs  search.rs  start.rs  status.rs  stop.rs  web.rs
crates/dtx/src/output/: caps.rs  line.rs  mod.rs  stream.rs  table.rs
crates/dtx/src/tui/: app.rs  logs.rs  mod.rs  ui.rs  wizard.rs
docs/: ARCHITECTURE.md  research-interface.md  research-web-intercace-p0.md  research-web-interface-p1.md  research-web-interface-ux-redesign.md
docs/examples/: README.md
docs/guides/: README.md  cli-output-design.md  cli-reference.md  code-intelligence.md  configuration.md  mcp-integration.md  memory-system.md  quick-start.md  troubleshooting.md  web-ui.md  writing-middleware.md  writing-plugins.md
docs/phases/: 1.1-resource-trait.md  1.2-eventbus-v2.md  1.3-context-errors.md  2.1-middleware-trait.md  2.2-logging-middleware.md  2.3-metrics-middleware.md  2.4-timeout-retry.md  3.1-protocol-core.md  3.2-transport-layer.md  3.3-mcp-integration.md  4.1-process-resource.md  4.2-orchestrator-v2.md  4.3-migration-cleanup.md  4.4-process-improvements.md  5.1-ai-middleware.md  5.2-natural-language.md  5.3-mcp-server.md  6.1-translation-trait.md  6.2-process-container.md  6.3-export-formats.md  6.4-config-import.md  7.1-plugin-loader.md  7.2-backend-plugins.md  7.3-middleware-plugins.md  7.4-plugin-sandbox.md  8.1-container-backend.md  (+3 more)
(+17 files in other folders)
