[workspace]
members = [
    "crates/dtx",
    "crates/dtx-agent",
    "crates/dtx-core",
    "crates/dtx-middleware",
    "crates/dtx-plugin",
    "crates/dtx-process",
    "crates/dtx-protocol",
    "crates/dtx-vm",
    "crates/dtx-web",
]
resolver = "2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["dtx contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/r17x/dtx"
description = "Dev Tools eXperience"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client (for process-compose API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.5", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower-service = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3.10"

# Nix AST parsing
rnix = "0.11"
rowan = "0.15"
async-trait = "0.1"

# Native Nix bindings (FFI to Nix C API) - from nixops4/nix-bindings-rust
nix-bindings-util = { git = "https://github.com/nixops4/nix-bindings-rust", branch = "main" }
nix-bindings-store = { git = "https://github.com/nixops4/nix-bindings-rust", branch = "main" }
nix-bindings-expr = { git = "https://github.com/nixops4/nix-bindings-rust", branch = "main" }
nix-bindings-fetchers = { git = "https://github.com/nixops4/nix-bindings-rust", branch = "main" }
nix-bindings-flake = { git = "https://github.com/nixops4/nix-bindings-rust", branch = "main" }

# Utilities
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Ordered maps
indexmap = { version = "2", features = ["serde"] }

# Utilities
dirs = "5.0"
libc = "0.2"
regex = "1"
once_cell = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# Internal crates
dtx-agent = { path = "crates/dtx-agent" }
dtx-core = { path = "crates/dtx-core" }
dtx-middleware = { path = "crates/dtx-middleware" }
dtx-process = { path = "crates/dtx-process" }
dtx-protocol = { path = "crates/dtx-protocol" }
dtx-plugin = { path = "crates/dtx-plugin" }
dtx-vm = { path = "crates/dtx-vm" }
dtx-web = { path = "crates/dtx-web" }

# Plugin system
toml = "0.8"
libloading = "0.8"
wasmtime = "27"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Container runtime
bollard = "0.18"

# Sync primitives
parking_lot = "0.12"
