[package]
name = "dtx-code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AST-grep powered code intelligence for dtx"

[lints]
workspace = true

[dependencies]
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true }
dashmap = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
