[package]
name = "dtx-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Web server for dtx - Axum handlers and templates"

[dependencies]
dtx-core = { workspace = true }
dtx-code = { workspace = true }
dtx-memory = { workspace = true }
dtx-process = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tempfile = { workspace = true }
axum-test = "15.0"

[lints]
workspace = true
